# HighAvailabilityClient

./: .gitignore  CMakeLists.txt  design.txt
client/: CMakeLists.txt
client/include/: ByteArray.h  ChunkScheduler.h  ChunkScheduler.hpp  Client.hpp  DiskWriter.h  DiskWriter.hpp  Downloader.hpp  MetaDataProvider.h  MetaDataProvider.hpp  Worker.hpp  client.hpp  downloadOrchestrator.hpp  worker.hpp
client/src/: main.cpp
common/: CMakeLists.txt
common/include/: MsgMetadata.hpp  gzip.hpp  proto.hpp  utils.hpp
server/: CMakeLists.txt
server/include/: Server.hpp  server.hpp
server/src/: main.cpp
